Fix navigation jump offsets
Fixes jumping back to the module header via the left menu and jumping to
type, operation and class definitions. CurryDoc now accounts for the jumbotron
height when calculating the target position of the ref'd html object.

--- a/include/bt4/css/currydoc.css
+++ b/include/bt4/css/currydoc.css
@@ -163,6 +163,10 @@ section {
   padding-top: 40px;
 }
 
+.jump-offset {
+  scroll-margin-top: 48px; /* Adjust for the fixed navbar */
+}
+
 .typeheader {
   font-size: 24px;
   font-weight: bold;
